test/errors/ltac/end1.ls

#OUTPUT
#Syntax Error: Expected return in function: main
# -> [15] end
#
#END

#RET 1

extern func printf(s:str, ...)

func main -> int
    x : int = 10
begin
end

